# controller-cli

./: AGENTS.md  Cargo.toml  IMPLEMENTATION.md  LLM_USAGE.md  Makefile  PR_BODY.md  PR_BODY_PAYMASTER.md  QUICK_REFERENCE.md  README.md  SKILL.md  TEST.md  changelog.md  install.sh
.claude/skills/controller-cli-development/: SKILL.md
.claude/skills/controller-cli-development/agents/: openai.yaml
.claude/skills/controller-skill/: README.md  skill.json  skill.md
.claude/skills/controller-skill/examples/: eth-token-policy.json  multi-token-policy.json  strk-token-policy.json
.github/workflows/: ci.yml  claude.yml  release-dispatch.yml  release.yml
docs/: PRD-marketplace-commands.md
examples/: calls.json  policies.json
references/: policy-examples.md
src/: api.rs  config.rs  error.rs  main.rs  presets.rs  version.rs
src/commands/: balance.rs  call.rs  calldata.rs  clear.rs  config_cmd.rs  execute.rs  generate.rs  list_sessions.rs  lookup.rs  mod.rs  receipt.rs  register.rs  status.rs  store.rs  transaction.rs  username.rs
src/commands/marketplace/: buy.rs  info.rs  mod.rs
src/commands/session/: authorize.rs  list.rs  mod.rs  revoke.rs
src/commands/starterpack/: info.rs  mod.rs  purchase.rs  quote.rs
src/output/: human.rs  json.rs  mod.rs
