[package]
name = "controller-cli"
version = "0.1.0"
edition = "2021"
authors = ["Cartridge <engineering@cartridge.gg>"]
description = "CLI for Cartridge Controller session management"
license = "MIT"
repository = "https://github.com/broody/controller-cli"

[[bin]]
name = "controller-cli"
path = "src/main.rs"

[dependencies]
# Use existing account_sdk from controller-rs
account_sdk = { path = "../controller-rs/account_sdk", features = ["filestorage"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP client for API queries
reqwest = { version = "0.12", features = ["json"] }

# HTTP server for callback
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime (already in account_sdk)
tokio = { version = "1", features = ["full"] }

# Serialization (already in account_sdk)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
erased-serde = "0.4"

# Error handling (already in account_sdk)
anyhow = "1"
thiserror = "1"

# Encoding
base64 = "0.22"
hex = "0.4"
url = "2.3"

# Terminal output
colored = "2.1"
indicatif = "0.17"

# Time handling (already in account_sdk)
chrono = { version = "0.4", features = ["serde"] }

# StarkNet (already in account_sdk, but explicit for clarity)
starknet = "0.17.0"
starknet-crypto = "0.8.1"
cainome-cairo-serde = "0.4.0"

# Config file parsing
toml = "0.8"
dirs = "5.0"
shellexpand = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
